[workspace]
members = [
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"client/relay-chain-interface",
	"client/relay-chain-inprocess-interface",
	"client/relay-chain-rpc-interface",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/runtime",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"polkadot-parachains/",
	"polkadot-parachains/pallets/parachain-info",
	"polkadot-parachains/pallets/ping",
	"polkadot-parachains/rococo-parachain",
	"polkadot-parachains/shell",
	"polkadot-parachains/parachains-common",
	"polkadot-parachains/statemint",
	"polkadot-parachains/statemine",
	"polkadot-parachains/westmint",
	"polkadot-parachains/canvas-kusama",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[patch."https://github.com/paritytech/substrate"]
frame-executive = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
frame-support = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
frame-system = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
frame-system-rpc-runtime-api = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
pallet-asset-tx-payment = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
pallet-assets = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
pallet-authorship = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
pallet-balances = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
pallet-transaction-payment = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sc-chain-spec = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sc-client-api = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sc-consensus = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sp-consensus-aura = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sp-core = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sc-executor = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sp-io = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sc-network = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sc-rpc = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sp-runtime = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sc-service = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sp-std = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sc-tracing = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }


sc-transaction-pool = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sc-transaction-pool-api = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sp-arithmetic = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sp-blockchain = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sp-keyring = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sp-state-machine = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sp-timestamp = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sp-tracing = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sp-trie = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
substrate-test-client = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }

sp-maybe-compressed-blob = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }

sp-api = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
sp-consensus = { git = "https://github.com/blasrodri/substrate", rev = "540610eda440168b10ad6c07f947bc1ba73cff92" }
